# aws-traning1

./: .gitignore  .prettierrc
server/: docker-compose.yml
server/fastapi/: Dockerfile
server/fastapi/app/: .gitignore  Makefile  pyproject.toml  requirements.txt  ruff.toml
server/fastapi/app/sam-hello-world/: samconfig.toml  template.yaml
server/fastapi/app/sam-hello-world/events/: get_item.json  post_item.json  put_item.json
server/fastapi/app/sam-hello-world/hello_world/: Dockerfile  app.py
server/fastapi/app/sam-hello-world/item/: app.py
server/fastapi/app/sam-hello-world/tests/integration/: test_api_gateway.py
server/fastapi/app/sam-hello-world/tests/unit/: test_handler.py
