[tool.poetry]
authors = ["Shitika kei"]
description = ""
name = "app"
version = "0.1.0"

[tool.poetry.dependencies]
aiohttp = "^3.10.10"
alembic = "^1.13.3"
anyio = ">=3.4.0,<5"
argon2-cffi = "^23.1.0"
arq = "^0.26.1"
asgi-correlation-id = "^4.1.0"
asyncpg = "^0.30.0"
beautifulsoup4 = "^4.2.0"
boto3 = "^1.26.151"
bump-pydantic = "^0.1.0"
coloredlogs = "^15.0.1"
fastapi = {extras = ["all"], version = "^0.115.2"}
fastui = "^0.7.0"
google-api-python-client = "^2.87.0"
google-auth = "^2.35.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
holidays = "^0.59"
httpx = "^0.27.2"
pandas = "^2.0.0"
pandera = {extras = ["polars", "pydantic"], version = "^0.20.4"}
polars = "^1.11.0"
pydantic = "^2.9.2"
pyotp = "^2.9.0"
python = "^3.12"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pytz = "^2024.1"
requests = "^2.28.1"
sentry-sdk = {extras = ["fastapi", "arq"], version = "^2.17.0"}
snowflake-connector-python = "^3.12.2"
sqlalchemy = "==2.0.27"
supervisor = "^4.2.5"
tenacity = "^9.0.0"
websockets = "^13.1"
mangum = "^0.19.0"

[tool.poetry.dev-dependencies]
black = "^24.10.0"
deepdiff = "^6.7.1"
factory-boy = "^3.2.1"
isort = "5.12.0"
locust = "^2.11.1"
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.7.0"
pytest-randomly = "^3.15.0"
ruff = "^0.7.0"
types-python-dateutil = "^2.8.15"
types-pytz = "^2024.1.0.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
  "tests",
]

[tool.pyright]
exclude = [
  "**/tests",
  "**/migrations",
  "**/__pycache__",
  "locustfile.py",
]
pythonPlatform = "All"
pythonVersion = "3.12"
reportAssertAlwaysTrue = true
reportConstantRedefinition = true
reportDuplicateImport = true
reportImportCycles = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInconsistentConstructor = true
reportMissingImports = true
reportMissingParameterType = true
reportMissingSuperCall = true
reportMissingTypeStubs = false
reportOverlappingOverload = true
reportPrivateUsage = true
reportUnnecessaryCast = true
reportUnnecessaryIsInstance = true
reportUnnecessaryTypeIgnoreComment = true
reportUnusedCallResult = true
reportUnusedClass = true
reportUnusedExpression = true
reportUnusedFunction = true
reportUnusedVariable = true
typeCheckingMode = 'basic'
useLibraryCodeForTypes = true
venv = "revisio-fastapi"
